# Sokoban-Haskell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Sokoban-Haskell.cabal  sokoban.hs
app/: Main.hs
data/maps/: dificil.json  easy.json  facil.json  hard.json  medio.json  medium.json
src/Game/: Engine.hs  GameLoop.hs  IO.hs  Logic.hs  MapLoader.hs  SokobanMap.hs  Types.hs  Utils.hs  View.hs
