cabal-version:       2.2
name:                Sokoban-Haskell
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jota
maintainer:          jamqueiroz2005@gmail.com
build-type:          Simple
extra-doc-files:     CHANGELOG.md

common warnings
  ghc-options:       -Wall

executable Sokoban-Haskell
  import:            warnings
  main-is:           Main.hs
  hs-source-dirs:    app
  default-language:  Haskell2010
  build-depends:
      base ^>= 4.17.2.0,
      aeson,
      bytestring,
      array,
      directory,
      filepath

