cabal-version:       2.2
name:                Sokoban-Haskell
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jota
maintainer:          jamqueiroz2005@gmail.com
build-type:          Simple
extra-doc-files:     CHANGELOG.md

common warnings
  ghc-options:       -Wall

library
  exposed-modules:   Game.Types
                   , Game.SokobanMap
                   , Game.Logic
                   , Game.GameLoop
                   , Game.IO
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:     base >= 4.17 && < 4.18
                   , array
                   , bytestring
                   , aeson
                   , filepath
                   , directory

executable Sokoban-Haskell
  import:            warnings
  main-is:           Main.hs
  hs-source-dirs:    app
                   , src
  default-language:  Haskell2010
  build-depends:     base >= 4.17 && < 4.18
                   , array
                   , bytestring
                   , aeson
                   , filepath
                   , directory
                   , Sokoban-Haskell
  other-modules:     Game.GameLoop
                   , Game.IO
                   , Game.Logic
                   , Game.SokobanMap
                   , Game.Types

